[gd_scene load_steps=4 format=3 uid="uid://d31q5r5qqq1j5"]

[ext_resource type="Script" uid="uid://dbjmyt8kpmxfp" path="res://scripts/menus/death_menu.gd" id="1_jgt2l"]
[ext_resource type="Texture2D" uid="uid://c40o612s66c43" path="res://images/svart.png" id="2_death_bg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_death"]
texture = ExtResource("2_death_bg")
modulate_color = Color(1, 1, 1, 0.8)

[node name="DeathMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jgt2l")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxTexture_death")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 298.0
offset_top = 216.0
offset_right = 854.0
offset_bottom = 551.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "YOU DIED"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Final Score: 0"
horizontal_alignment = 1

[node name="btn_restart" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="btn_main_menu" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "MAIN MENU"

[node name="btn_quit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "QUIT"
